--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -36,7 +36,7 @@
                                     <a href="#" class="logo logo-admin">
                                         <img src="@applicationLogoPath" height="50" alt="logo" class="auth-logo">
                                     </a>
-                                    <h4 class="fw-semibold text-white font-18">Sign In</h4>
+                                    @* <h4 class="fw-semibold text-white font-18">Sign In</h4> *@
                                 </div>
                             </div>
                             <div class="card-body p-0 auth-content">
