--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
@@ -5,6 +5,7 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     ModelPopUpViewModel addFollowUpModel = new ModelPopUpViewModel() { ModelPopUpId = "AddUpdateFollowUpModelPopupId", ModalContentId = "AddUpdateFollowUpModelPopupContentId" };
     ModelPopUpViewModel manualAttendanceModel = new ModelPopUpViewModel() { ModelPopUpId = "ManualAttendanceModelPopupId", ModalContentId = "ManualAttendanceModelPopupContentId" };
+    string css = "";
 }
 
 <div class="row">
@@ -21,6 +22,9 @@
                 {
                     foreach (var item in Model?.GymMemberDetailsList)
                     {
+                        {
+                            css = item.IsActive ? "" : "pointer-events: none;";
+                        };
                         <tr>
                             <td style="text-align: center; width: 0px"><img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" /></td>
                             <td>@item.FirstName</td>
@@ -33,11 +37,9 @@
                             <td class="text-center data-action">
                                 <a href="../@controllerName/UpdateMemberPersonalDetails?gymMemberDetailId=@item.GymMemberDetailId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a data-bs-toggle="modal" data-bs-target="#@addFollowUpModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberFollowUp('@addFollowUpModel.ModalContentId','@item.GymMemberDetailId','0','@item.PersonId')" title="Add Follow-Up" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas fa-handshake"></i></a><span class="m-2">|</span>
-                                @if (item.IsActive)
-                                {
-                                    <a data-bs-toggle="modal" data-bs-target="#@manualAttendanceModel.ModelPopUpId
-                                    " href="void javascritp(0)" onclick="GymMemberDetails.CreatEditGeneralPersonAttendanceDetails('@manualAttendanceModel.ModalContentId','@item.GymMemberDetailId','0','@item.PersonId')" title="Manual Attendance" class="btn btn-sm btn-soft-info btn-circle"><i class="fas fa-calendar-check"></i></a><span class="m-2">|</span>
-                                }
+                                <a data-bs-toggle="modal" data-bs-target="#@manualAttendanceModel.ModelPopUpId" style="@css" href="void javascritp(0)" onclick="GymMemberDetails.CreatEditGeneralPersonAttendanceDetails('@manualAttendanceModel.ModalContentId','@item.GymMemberDetailId','0','@item.PersonId')" title="Manual Attendance" class="btn btn-sm btn-soft-info btn-circle">
+                                    <i class="fas fa-calendar-check"></i>
+                                </a><span class="m-2">|</span>
                                 <!-- Delete Button -->
                                 <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GymMemberDetailId">
                                     <i class="fas fa-trash-alt"></i>
@@ -66,7 +68,7 @@
                             </td>
                         </tr>
 
-                       
+
                     }
                 }
             </tbody>
