--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
@@ -36,11 +36,16 @@
                                     <a href="#" class="logo logo-admin">
                                         <img src="@applicationLogoPath" height="50" alt="logo" class="auth-logo">
                                     </a>
-                                    <h4 class="fw-semibold text-white font-18">Reset Password</h4>
-                                    <p class="text-muted  mb-0">Instructions will be sent to you on your email address or no mobile number!</p>
+                                    @* <h4 class="fw-semibold text-white font-18">Reset Password</h4> *@
+                                    @* <p class="text-muted  mb-0">Instructions will be sent to you on your email address or no mobile number!</p> *@
                                 </div>
                             </div>
                             <div class="card-body p-0 auth-content">
+                                <ul class="nav-border nav nav-pills" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link active fw-semibold" data-bs-toggle="tab" href="/user/login" role="tab">Reset Password</a>
+                                    </li>
+                                </ul>
                                 <!-- Tab panes -->
                                 <div class="tab-content">
                                     <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
@@ -54,6 +59,18 @@
                                                 </div>
                                                 @Html.ValidationMessageFor(m => m.UserName, null)
                                             </div>
+                                            <div class="form-group row my-3">
+                                                <div class="col-sm-6">
+                                                    <div class="custom-control custom-switch switch-success">
+                                                       @*  <input type="checkbox" class="custom-control-input" id="customSwitchSuccess">
+                                                        <label class="form-label text-muted" for="customSwitchSuccess">Remember me</label> *@
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-6 text-end">
+                                                    <a href="/user/login" class="text-muted font-13"><i class="dripicons-lock"></i>Log in</a>
+                                                </div>
+                                            </div>
+
                                             <div class="form-group mb-0 row">
                                                 <div class="col-12">
                                                     <button class="btn btn-primary w-100 waves-effect waves-light">Reset<i class="fas fa-sign-in-alt ms-1"></i></button>
