--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
@@ -151,9 +151,9 @@
                 showWeekNumbers: false,
                 drops: "auto",
                 opens: "right",
-                autoApply: false,
+                autoApply: true,
                 "locale": {
-                    "format": "DD-MM-YYYY",
+                    // "format": "DD-MMM-YYYY",
                     "separator": " - ",
                     "applyLabel": "Apply",
                     "cancelLabel": "Cancel",
