--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GeneralEmailTemplateListViewModel
 @{
-    ViewBag.Title = "Email List";
+    ViewBag.Title = "Email Template List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
