--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/CreateEdit.cshtml
@@ -40,7 +40,14 @@
                                 <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailTemplateCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.EmailTemplateCode, new { @class = "form-control" })
+                                        @if (Model.GeneralEmailTemplateId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.EmailTemplateCode, new { @class = "form-control", @readonly = "readonly" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.EmailTemplateCode, new { @class = "form-control" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.EmailTemplateCode)
                                     </div>
                                 </div>
@@ -54,7 +61,7 @@
                                 <div class="col-lg-12">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailTemplate, new { @class = "form-label required" })
-                                        @Html.TextAreaFor(x => x.EmailTemplate, new { @class = "form-control" })
+                                        @Html.Partial("~/Views/Shared/Control/_TinymceTextbox.cshtml", "EmailTemplate")
                                         @Html.ValidationMessageFor(x => x.EmailTemplate)
                                     </div>
                                 </div>
@@ -76,4 +83,3 @@
         </div>
     </div>
 </div>
-
