--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/UpdateGymMemberOtherDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/UpdateGymMemberOtherDetails.cshtml
@@ -27,6 +27,9 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GymMemberDetailId)
+                            @Html.HiddenFor(m => m.PersonId)
+                            @Html.HiddenFor(m => m.FirstName)
+                            @Html.HiddenFor(m => m.LastName)
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
