--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymBodyMeasurementType/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymBodyMeasurementType/CreateEdit.cshtml
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label"})
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input"})
                                         </div>
