--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/List.cshtml
@@ -12,9 +12,20 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Member List</span>
+                        @if (Model.ListType == "Active")
+                        {
+                            <span class="card-title">Active Member List</span>
+                        }
+                        else if (Model.ListType == "InActive")
+                        {
+                            <span class="card-title">InActive Member List</span>
+                        }
+                        else
+                        {
+                            <span class="card-title">All Member List</span>
+                        }
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateMember" role="button"><i class="fas fa-plus me-2"></i>Add Member</a>
-                        
+
                     </div>
                     <div class="card-header">
                         <div class="row">
@@ -36,7 +47,7 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
 </div>
 <!-- end page content -->
