--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAddress.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAddress.cshtml
@@ -5,27 +5,28 @@
 }
 @foreach (GeneralPersonAddressViewModel item in Model?.GeneralPersonAddressList)
 {
+    item.EntityId = Model.EntityId;
+    item.EntityType = Model.EntityType;
     <div class="row">
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
                     @if (item.AddressTypeEnum == AddressTypeEnum.PermanentAddress.ToString())
                     {
-                        <span class="card-title">Permanent Address</span>
+                        <span class="card-title">Permanent Address: @Model.FirstName @Model.LastName</span>
                     }
                     else if (item.AddressTypeEnum == AddressTypeEnum.CorrespondanceAddress.ToString())
                     {
-                        <span class="card-title">Correspondance Address</span>
-                        <div class="form-check">
-                            @Html.CheckBoxFor(x=>x.IsCorrespondanceAddressSameAsPermanentAddress,new {@class = "form-check-input"})
-                            @Html.LabelFor(x=>x.IsCorrespondanceAddressSameAsPermanentAddress,new {@class = "form-label"})
-                        </div>
+                        <span class="card-title">Correspondance Address: @Model.FirstName @Model.LastName</span>
+                        @* <div class="form-check">
+                            @Html.CheckBoxFor(x => x.IsCorrespondanceAddressSameAsPermanentAddress, new { @class = "form-check-input" })
+                            @Html.LabelFor(x => x.IsCorrespondanceAddressSameAsPermanentAddress, new { @class = "form-label" })
+                        </div> *@
                     }
                     else if (item.AddressTypeEnum == AddressTypeEnum.BusinessAddress.ToString())
                     {
-                        <span class="card-title">Business Address</span>
+                        <span class="card-title">Business Address: @Model.FirstName @Model.LastName</span>
                     }
-                    
                 </div>
                 <div class="card-body">
                     @Html.Partial("~/Views/Shared/GeneralPerson/_CreateEditGeneralPersonAddress.cshtml", item)
