--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
@@ -5,9 +5,9 @@
 }
 @if (Model.IsDisabled)
 {
-    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-control", @onchange = Model.ChangeEvent, @readonly = "true" })
+    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-control " + Model.ClassName, @onchange = Model.ChangeEvent, @disabled = "disabled" })
 }
 else
 {
-    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-control", @onchange = Model.ChangeEvent })
+    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-control " + Model.ClassName, @onchange = Model.ChangeEvent })
 }
