--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml
@@ -19,6 +19,9 @@
                 <a class="nav-link" href="/EmployeeMaster/EmployeeService?employeeId=@employeeId&personId=@personId" aria-selected="true">
                     <i class="fas fa-user-cog"></i><h5 class="m-0 ps-2">Service Details</h5>
                 </a>
+                <a class="nav-link" href="/EmployeeMaster/CreateEditEmployeeAddress?employeeId=@employeeId&personId=@personId" aria-selected="true">
+                    <i class="fas fa-map-marker-alt"></i><h5 class="m-0 ps-2">Address</h5>
+                </a>
             </div>
         </div>
     </div>
