--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/CreateEditEmployee.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/CreateEditEmployee.cshtml
@@ -41,15 +41,20 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.EmployeeId)
+                            @if (Model.EmployeeId > 0)
+                            {
+                                @Html.HiddenFor(m => m.SelectedCentreCode)
+                                @Html.HiddenFor(m => m.SelectedDepartmentId)
+                            }
                             <div class="row">
-                                <div class="col-lg-3">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", departmentDropdown)
