--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/CreateEdit.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = Model.InventoryCategoryId > 0 ? "Update Inventory Category" : "Add Inventory Category";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel parentInventoryCategorys = new DropdownViewModel() { DropdownType = DropdownTypeEnum.InventoryCategory.ToString(), DropdownName = "ParentInventoryCategoryId", DropdownSelectedValue = Model.ParentInventoryCategoryId.ToString(), ChangeEvent = "", Parameter = Model.InventoryCategoryId.ToString() };
+
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -31,30 +33,30 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.ParentInventoryCategoryId, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ParentInventoryCategoryId, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.ParentInventoryCategoryId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CategoryCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CategoryCode, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.CategoryCode)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.CategoryName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control", type = "number" })
+                                        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.CategoryName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.ItemPrefix, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ItemPrefix, new { @class = "form-control", type = "number" })
+                                        @Html.LabelFor(x => x.CategoryCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.CategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.ValidationMessageFor(x => x.CategoryCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ItemPrefix, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.ItemPrefix, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.ItemPrefix)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ParentInventoryCategoryId, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", parentInventoryCategorys)
+                                        @Html.ValidationMessageFor(x => x.ParentInventoryCategoryId)
                                     </div>
                                 </div>
                             </div>
