--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemModelGroup/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemModelGroup/_List.cshtml
@@ -20,7 +20,7 @@
                         <tr>
                             <td>@item.ItemModelGroupName</td>
                             <td>@item.ItemModelGroupCode</td>
-                            
+                            <td>@item.InventoryModelEnumId</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?inventoryItemModelGroupId=@item.InventoryItemModelGroupId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?inventoryItemModelGroupIds=@item.InventoryItemModelGroupId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
