--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemModelGroup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemModelGroup/CreateEdit.cshtml
@@ -4,7 +4,6 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
-
 <!-- Page Content -->
 <div class="page-content mt-5">
     <div class="container-fluid">
@@ -30,23 +29,23 @@
                         {
                             @Html.HiddenFor(x => x.InventoryItemModelGroupId)
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
-                                        <label class="form-label">Item Model Group Code</label>
-                                        @Html.TextBoxFor(x => x.ItemModelGroupCode, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.ItemModelGroupCode)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        <label class="form-label">Item Model Group Name</label>
+                                        @Html.LabelFor(x => x.ItemModelGroupName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.ItemModelGroupName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.ItemModelGroupName)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
-                                        <label class="form-label">Inventory Model</label>
+                                        @Html.LabelFor(x => x.ItemModelGroupCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.ItemModelGroupCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.ValidationMessageFor(x => x.ItemModelGroupCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.InventoryModelEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.InventoryModelEnumId.ToString(),
@@ -60,7 +59,6 @@
                             <!-- Cost Method Section -->
                             <div class="row">
                                 <div class="col-lg-12">
-
                                     <h5>Costing Method And Cost Recognition</h5>
                                 </div>
                                 <div class="col-lg-3">
