--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
@@ -47,7 +47,14 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control" })
+                                        @if (Model.OrganisationCentreMasterId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control", @readonly = "readonly" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
                                 </div>
