--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -22,6 +22,10 @@
                     <i class="ti-control-record"></i>
                     <h5 class="m-0">Centre SMTP Setup</h5>
                 </a>
+                <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseEmailTemplateSetup?organisationCentreId=@Model" aria-selected="true">
+                    <i class="ti-control-record"></i>
+                    <h5 class="m-0">Centre Email Template</h5>
+                </a>
             </div>
         </div>
     </div>
