--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -137,6 +137,7 @@
     <script src="~/js/coditech/user.js"></script>
     <script src="~/js/coditech/Organisation/OrganisationCentrewiseDepartment.js"></script>
     <script src="~/js/coditech/Organisation/OrganisationCentrewiseBuildingRooms.js"></script>
+    <script src="~/js/Coditech/Organisation/OrganisationCentrewiseEmailTemplate.js"></script>
     <script src="~/js/coditech/HMS/HospitalDoctors.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
