--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseEmailTemplate.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseEmailTemplate.cshtml
@@ -3,16 +3,27 @@
     ViewBag.Title = "Organisation Centrewise Email Template";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
-    keyValuePairs.Add("OrganisationCentre", Model.CentreCode.ToString());
+    DropdownViewModel emailTemplateCodeDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.EmailTemplate.ToString(), DropdownName = "EmailTemplateCode", DropdownSelectedValue = Model.EmailTemplate, ChangeEvent = $"OrganisationCentrewiseEmailTemplate.GetEmailTemplateByCentreCode('{Model.OrganisationCentreMasterId}')" };
 }
 <!-- Page Content-->
 <div class="page-content">
     <div class="container-fluid">
         <!-- Page-Title -->
         <div class="row">
+            <div class="col-sm-12">
+                <h3 class="content-header-title">Organisation Centrewise Email Template</h3>
+                <div class="page-title-box">
+                    <div class="row">
+                        <div class="col">
+                        </div><!--end col-->
+                    </div><!--end row-->
+                </div><!--end page-title-box-->
+            </div><!--end col-->
+        </div><!--end row-->
+        <!-- end page title end breadcrumb -->
+        <div class="row">
             <div class="col-lg-2">
-                @Html.Partial("~/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml", keyValuePairs)
+                @Html.Partial("~/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml", Model.OrganisationCentreMasterId.ToString())
             </div>
             <div class="col-lg-10">
                 <div class="card">
@@ -20,22 +31,32 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.OrganisationCentrewiseEmailTemplateId)
-                            <div class="row">                          
+                            @Html.HiddenFor(m => m.CentreCode)
+                            <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Subject, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Subject)
+                                        @Html.LabelFor(x => x.CentreName, new { @class = "form-label " })
+                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled = "disabled" })
+                                        @Html.ValidationMessageFor(x => x.CentreName)
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-2">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.EmailTemplate, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.EmailTemplate, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.EmailTemplate)
+                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control", @readonly = "readonly" })
                                     </div>
-                                </div>                             
-                            </div>                      
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.EmailTemplateCode, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", emailTemplateCodeDropdown)
+                                        @Html.ValidationMessageFor(x => x.EmailTemplateCode)
+                                    </div>
+                                </div>
+                                <div id="emailTemplateId"> </div>
+                            </div>
+                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
@@ -43,9 +64,3 @@
         </div>
     </div>
 </div>
-<script src="~/js/Coditech/Organisation/OrganisationCentrewiseEmailTemplate.js"></script>
-<script>
-    $(document).ready(function () {
-        OrganisationCentrewiseEmailTemplate.GetEmailTemplateByCentreCode(@Model.CentreCode);
-    });
-</script>
