--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemStorageDimension/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemStorageDimension/CreateEdit.cshtml
@@ -1,8 +1,9 @@
 ﻿@model InventoryItemStorageDimensionViewModel
 @{
-    ViewBag.Title = Model.InventoryItemStorageDimensionId > 0 ? "Update Inventory Item Storage Dimension" : "Add Inventory Item Storage Dimension";
+    ViewBag.Title = Model.InventoryItemStorageDimensionId > 0 ? "Update Inventory Category" : "Add Inventory Item Storage Dimension";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+   
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -31,18 +32,18 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.CategoryName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.CategoryName)
+                                        @Html.LabelFor(x => x.StorageDimensionName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.StorageDimensionName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.StorageDimensionName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.CategoryCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                                        @Html.ValidationMessageFor(x => x.CategoryCode)
+                                        @Html.LabelFor(x => x.StorageDimensionCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.StorageDimensionCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.ValidationMessageFor(x => x.StorageDimensionCode)
                                     </div>
-                                </div>
+                                </div>                              
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
