--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemStorageDimension/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemStorageDimension/List.cshtml
@@ -13,7 +13,7 @@
                     <div class="card-header">
                         <span class="card-title">@AdminResources.LabelInventoryItemStorageDimensionList</span>
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Inventory Item Storage Dimension</a>
-                        
+
                     </div>
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
@@ -25,4 +25,4 @@
         </div>
     </div>
 </div>
-
+<!-- end page content -->
