--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SaleInvoiceList.cshtml
@@ -23,13 +23,13 @@
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                             </div>
                             <div class="col-md-1">
-                                @Html.LabelFor(x => x.FromDate, "FromDate", new { @class = "form-label" })
+                                @Html.LabelFor(x => x.FromDate, new { @class = "form-label" })
                             </div>
                             <div class="col-md-2">
                                 @Html.TextBoxFor(x => x.FromDate, new { @class = "form-control" })
                             </div>
                             <div class="col-md-1">
-                                @Html.LabelFor(x => x.ToDate, "ToDate", new { @class = "form-label" })
+                                @Html.LabelFor(x => x.ToDate, new { @class = "form-label" })
                             </div>
                             <div class="col-md-2">
                                 @Html.TextBoxFor(x => x.ToDate, new { @class = "form-control" })
