--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SalesInvoicePrint.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SalesInvoicePrint.cshtml
@@ -150,11 +150,14 @@
                                                     <td class="font-14 text-dark"  style="font-size: 14px !important;color: #1d2c48 !important;padding: .45rem .3rem;box-shadow: inset 0 0 0 9999px rgba(0,0,0,0);font-weight: 400;vertical-align: middle;border-color: #eaf0f9;"><b>Tax Rate</b></td>
                                                     <td class="font-14 text-dark"  style="font-size: 14px !important;color: #1d2c48 !important;padding: .45rem .3rem;box-shadow: inset 0 0 0 9999px rgba(0,0,0,0);font-weight: 400;vertical-align: middle;border-color: #eaf0f9;"><b>@AdminGeneralHelper.FormatPriceWithCurrency(@Model.TaxAmount)</b></td>
                                                 </tr>
+                                                @if(@Model.DiscountAmount>0)
+                                                {
                                                 <tr style="border-color: inherit;border-style: solid;border-width: 1px 0;">
                                                     <th colspan="1"></th>
                                                     <td class="font-14 text-dark"  style="font-size: 14px !important;color: #1d2c48 !important;padding: .45rem .3rem;box-shadow: inset 0 0 0 9999px rgba(0,0,0,0);font-weight: 400;vertical-align: middle;border-color: #eaf0f9;"><b>Discount</b></td>
                                                     <td class="font-14 text-dark"  style="font-size: 14px !important;color: #1d2c48 !important;padding: .45rem .3rem;box-shadow: inset 0 0 0 9999px rgba(0,0,0,0);font-weight: 400;vertical-align: middle;border-color: #eaf0f9;"><b>@AdminGeneralHelper.FormatPriceWithCurrency(@Model.DiscountAmount)</b></td>
                                                 </tr>
+                                                }
                                                 <tr style="border-color: inherit;border-style: solid;border-width: 1px 0;">
                                                     <th colspan="1"></th>
                                                     <td class="font-14 text-dark"  style="font-size: 14px !important;color: #1d2c48 !important;padding: .45rem .3rem;box-shadow: inset 0 0 0 9999px rgba(0,0,0,0);font-weight: 400;vertical-align: middle;border-color: #eaf0f9;"><b>Total</b></td>
@@ -206,13 +209,14 @@
                                         <li><small class="font-12"> Rerack the weights back in the right place after use.</small></li>
                                         <li><small class="font-12"> Do not drop/throw weights on the floor.</small></li>
                                         <li><small class="font-12"> It’s a unisex gym, please maintain discipline.</small></li>
+                                        <li><small class="font-12"> While making videos or taking photos be responsible and value privacy of other gym members.</small></li>
                                     </ul>
                                 </div>
 
                                 <div class="col-lg-4 align-self-end" style="flex: 0 0 auto;width: 49.33%;align-self: flex-end !important;">
                                     <div class="float-end" style="float:right;">
                                         @* <small>Account Manager</small> *@
-                                        <img src="../assets/images/signature.png" alt="" class="mt-2 mb-1" height="26" width="150">
+                                        <img src="../assets/images/signature.png" alt="" class="mt-2 mb-1" height="70" width="150">
                                         <p class="border-top">Account Manager</p>
                                     </div>
                                 </div>
