--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEmailTemplate/CreateEdit.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = Model.GeneralEmailTemplateId > 0 ? "Update Email Template" : "Add Email Template";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    TinymceTextboxViewModel tinymceEmailTemplateTextboxViewModel = new TinymceTextboxViewModel() { Id = "EmailTemplate", Data = Model.EmailTemplate };
 }
 
 <!-- Page Content-->
@@ -61,7 +62,7 @@
                                 <div class="col-lg-12">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailTemplate, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_TinymceTextbox.cshtml", "EmailTemplate")
+                                        @Html.Partial("~/Views/Shared/Control/_TinymceTextbox.cshtml", tinymceEmailTemplateTextboxViewModel)
                                         @Html.ValidationMessageFor(x => x.EmailTemplate)
                                     </div>
                                 </div>
