--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
@@ -1,6 +1,7 @@
 ﻿@model OrganisationCentrewiseEmailTemplateViewModel
 @{
     Layout = null;
+    TinymceTextboxViewModel tinymceEmailTemplateTextboxViewModel = new TinymceTextboxViewModel() { Id = "EmailTemplate", Data = Model.EmailTemplate };
 }
 <div class="col-lg-12">
     <div class="mb-3">
@@ -12,7 +13,7 @@
 <div class="col-lg-12">
     <div class="mb-3">
         @Html.LabelFor(x => x.EmailTemplate, new { @class = "form-label required" })
-        @Html.Partial("~/Views/Shared/Control/_TinymceTextbox.cshtml", "EmailTemplate")
+        @Html.Partial("~/Views/Shared/Control/_TinymceTextbox.cshtml", tinymceEmailTemplateTextboxViewModel)
         @Html.ValidationMessageFor(x => x.EmailTemplate)
     </div>
 </div>
