--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/CreateEdit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeneralUserMainnMenuViewModel
+﻿@model UserMainMenuViewModel
 @{
     ViewBag.Title = Model.UserMainMenuMasterId > 0 ? "Update UserMainMenu" : "Add UserMainMenu";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
