--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeneralCountryListViewModel
+﻿@model UserMainMenuListViewModel
 @{
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -13,19 +13,21 @@
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
-                @if (Model?.GeneralCountryList?.Count > 0)
+                @if (Model?.MenuList?.Count > 0)
                 {
-                    foreach (var item in Model?.GeneralCountryList)
+                    foreach (var item in Model?.MenuList)
                     {
                         <tr>
-                            <td>@item.CountryName</td>
-                            <td>@item.CountryCode</td>
+                            <td>@item.MenuName</td>
+                            <td>@item.ParentMenuName</td>
+                            <td>@item.ModuleCode</td>
+                            <td>@item.MenuDisplaySeqNo</td>
                             <td>
-                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
+                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsEnable)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?generalCountryId=@item.GeneralCountryMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?countryIds=@item.GeneralCountryMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?generalCountryId=@item.UserMainMenuMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?countryIds=@item.UserMainMenuMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
