--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_MenuList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_MenuList.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Coditech.Admin.Utilities;
 @using Coditech.Common.API.Model;
-@model List<UserMenuModel>
+@model List<UserMainMenuModel>
 @{
     Layout = null;
 }
 @if (Model?.Count > 0)
 {
-    @foreach (UserMenuModel itemParent in Model.Where(x => x.ParentMenuCode == null).OrderBy(y => y.MenuDisplaySeqNo))
+    @foreach (UserMainMenuModel itemParent in Model.Where(x => x.ParentMenuCode == null).OrderBy(y => y.MenuDisplaySeqNo))
     {
         <li class="has-submenu last-elements">
             <a href="#">
@@ -19,7 +19,7 @@
                 </span>
             </a>
             <ul class="submenu">
-                @foreach (UserMenuModel itemMenu in Model.Where(x => x.ParentMenuCode == itemParent.MenuCode).OrderBy(y => y.MenuDisplaySeqNo))
+                @foreach (UserMainMenuModel itemMenu in Model.Where(x => x.ParentMenuCode == itemParent.MenuCode).OrderBy(y => y.MenuDisplaySeqNo))
                 {
                     <li>
                         <a href="/@itemMenu.MenuLink">
