--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseEmailTemplate.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseEmailTemplate.cshtml
@@ -31,7 +31,7 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.OrganisationCentrewiseEmailTemplateId)
-                            @Html.HiddenFor(m => m.CentreCode)
+                            @Html.HiddenFor(m => m.OrganisationCentreMasterId)
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
