--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
@@ -1,7 +1,6 @@
 ﻿@model OrganisationCentrewiseEmailTemplateViewModel
 @{
     Layout = null;
-    TinymceTextboxViewModel tinymceEmailTemplateTextboxViewModel = new TinymceTextboxViewModel() { Id = "EmailTemplate", Data = Model.EmailTemplate };
 }
 <div class="col-lg-12">
     <div class="mb-3">
@@ -13,7 +12,7 @@
 <div class="col-lg-12">
     <div class="mb-3">
         @Html.LabelFor(x => x.EmailTemplate, new { @class = "form-label required" })
-        @Html.Partial("~/Views/Shared/Control/_TinymceTextbox.cshtml", tinymceEmailTemplateTextboxViewModel)
+        @Html.TextAreaFor(x => x.EmailTemplate, new { @class = "form-control", rows = "10" })
         @Html.ValidationMessageFor(x => x.EmailTemplate)
     </div>
 </div>
